force-app/main/default/objects/Product2/fields/DeptCode__c.field-meta.xml
<CustomField>
    <fullName>DeptCode__c</fullName>
    <label>局コード</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>