force-app/main/default/objects/Product2/fields/EbisuDispFrom__c.field-meta.xml
<CustomField>
    <fullName>EbisuDispFrom__c</fullName>
    <label>えびす表示期間FROM</label>
    <type>Date</type>
</CustomField>