force-app/main/default/objects/Product2/fields/EbisuDispTo__c.field-meta.xml
<CustomField>
    <fullName>EbisuDispTo__c</fullName>
    <label>えびす表示期間TO</label>
    <type>Date</type>
</CustomField>