force-app/main/default/objects/Product2/fields/EbisuNewDispDate__c.field-meta.xml
<CustomField>
    <fullName>EbisuNewDispDate__c</fullName>
    <label>えびす新着順用更新日</label>
    <type>Date</type>
</CustomField>