force-app/main/default/objects/Product2/fields/EbisuRegistType__c.field-meta.xml
<CustomField>
    <fullName>EbisuRegistType__c</fullName>
    <defaultValue>false</defaultValue>
    <description>えびす：空白(null):本登録、1:仮登録</description>
    <label>えびす登録区分</label>
    <type>Checkbox</type>
</CustomField>