force-app/main/default/objects/Product2/fields/EventDate__c.field-meta.xml
<CustomField>
    <fullName>EventDate__c</fullName>
    <label>開催日</label>
    <length>10</length>
    <type>Text</type>
</CustomField>