force-app/main/default/objects/Product2/fields/FlgDownload__c.field-meta.xml
<CustomField>
    <fullName>FlgDownload__c</fullName>
    <label>ダウンロード商品</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>