force-app/main/default/objects/Product2/fields/FlgTeiki__c.field-meta.xml
<CustomField>
    <fullName>FlgTeiki__c</fullName>
    <defaultValue>false</defaultValue>
    <description>えびす：空白(null):通常商品、1:定期販売商品</description>
    <label>定期販売商品</label>
    <type>Checkbox</type>
</CustomField>