force-app/main/default/objects/Product2/fields/ITEM_DOWNLOAD__c.field-meta.xml
<CustomField>
    <fullName>ITEM_DOWNLOAD__c</fullName>
    <label>ITEM_DOWNLOAD</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>