force-app/main/default/objects/Product2/fields/ItemId__c.field-meta.xml
<CustomField>
    <fullName>ItemId__c</fullName>
    <externalId>true</externalId>
    <label>商品ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>