force-app/main/default/objects/Product2/fields/NameKana__c.field-meta.xml
<CustomField>
    <fullName>NameKana__c</fullName>
    <label>商品名(カナ)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>