force-app/main/default/objects/Product2/fields/RouteCode__c.field-meta.xml
<CustomField>
    <fullName>RouteCode__c</fullName>
    <label>ルートコード</label>
    <length>10</length>
    <type>Text</type>
</CustomField>