force-app/main/default/objects/Product2/fields/SaleDate__c.field-meta.xml
<CustomField>
    <fullName>SaleDate__c</fullName>
    <label>発売日</label>
    <type>Date</type>
</CustomField>