force-app/main/default/objects/Product2/fields/ServiceId__c.field-meta.xml
<CustomField>
    <fullName>ServiceId__c</fullName>
    <label>サービスID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>