force-app/main/default/objects/Product2/fields/StaffId__c.field-meta.xml
<CustomField>
    <fullName>StaffId__c</fullName>
    <label>受注担当</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>